--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-
-
-
-
+  <head>
+    <title>Calculator</title>
+    
+    <script src="calculator.js"></script>
+  </head>
+  <body>
+    <p>Equation: <input type="text" id="equationInput"></input></p>
+  </body>
 </html>
