--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <p>Equation: <input type="text" id="equationInput"></input></p>
+    <br><p id="answer></p>
+    <button onclick="document.getElementById('answer').HTML = calculate(document.getElementById('equationInput').value());"><str>Calculate</str></button>
   </body>
 </html>
