--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="calculator.js"></script>
   </head>
   <body>
-    <p>EquationPPPPPPP: <input type="text" id="equationInput"></input></p>
+    <p>Equation: <input type="text" id="equationInput"></input></p>
     <br><p id="answer"></p>
     <button onclick="document.getElementById('answer').HTML = calculate(document.getElementById('equationInput').value());"><str>Calculate</str></button>
   </body>
