--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <p>Equation: <input type="text" id="equationInput"></input></p>
     <br><p id="answer"></p>
 
-    <script src="calculator.js"></script>
+<!--     <script src="calculator.js"></script> -->
     <button onclick="document.getElementById('answer').HTML = calculate(document.getElementById('equationInput').value());"><str>Calculate</str></button>
   </body>
 </html>
