--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
   <head>
     <title>Calculator</title>
-  </head>
-  <body>
-    <p>Equation: <input type="text" id="equationInput"></input></p>
-    <br><p id="answer"></p>
     
+    <script src="style.css"></script>
     <script src="LMath.js"></script>
     <script src="calculator.js"></script>
-    <button onclick="outputAnswer('equationInput', 'answer');"><str>Calculate</str></button>
+  </head>
+  <body>
+    <p id="header" style="font-size: 4em;">Calculator</p>
+    <div id="calculator">
+      <p>Equation: <input type="text" id="equationInput" style="width: 60%;"></input></p>
+      <p id="answer">=</p>
+      <button id="calculate-button" onclick="outputAnswer('equationInput', 'answer');"><str>Calculate</str></button>
+    </div>
   </body>
 </html>
