--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Calculator</title>
     
-    <link href="style.css" rel="stylesheet" type="text/css"></link>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="LMath.js"></script>
     <script src="calculator.js"></script>
   </head>
