--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,8 +4,8 @@
     <title>Calculator</title>
     
     <link href="Arongil/calculator/style.css" rel="stylesheet" type="text/css" />
-    <script src="LMath.js"></script>
-    <script src="calculator.js"></script>
+    <script src="Arongil/calculator/LMath.js"></script>
+    <script src="Arongil/calculator/calculator.js"></script>
   </head>
   <body>
     <p id="header" style="font-size: 4em;">Calculator</p>
