--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Calculator</title>
     
-    <link href="calculator/style.css" rel="stylesheet" type="text/css" />
-    <script src="calculator/LMath.js"></script>
-    <script src="calculator/calculator.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="LMath.js"></script>
+    <script src="calculator.js"></script>
   </head>
   <body>
     <p id="header" style="font-size: 4em;">Calculator</p>
