--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p style="font-size: 3em; text-align: center;">PLACEHOLDER</p>
-    <p style="font-size: 1em; text-align: center;">go to <a href="www.arongil.com/calculator">www.arongil.com/calculator</a></p>
+    <p style="font-size: 1em; text-align: center;">go to <a href="/calculator">www.arongil.com/calculator</a></p>
   </body>
 </html>
