--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,9 +16,12 @@
       <p id="answer" class="medium">=</p>
       <button id="calculate-button" class="medium" onclick="outputAnswer('equationInput', 'answer');"><str>Calculate</str></button>
     </div>
-    <div id="info">
+    <div id="info" style="width: 60%;">
       <p class="big">How Does it Work?</p>
       <p class="medium">Overview</p>
+      <p class="small">There are two parts to this calculator: a <span class="green">parser</span> that organizes the expression entered, 
+        breaking it up by operators and parentheses into simpler 1-step operations the computer can do, and a library of mathematical 
+        functions, like sin, sqrt, and ln, called <span class="blue">LMath</span>.</p>
     </div>
   </body>
 </html>
