--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,12 +16,37 @@
       <p id="answer" class="medium">=</p>
       <button id="calculate-button" class="medium" onclick="outputAnswer('equationInput', 'answer');"><str>Calculate</str></button>
     </div>
-    <div id="info" style="width: 60%;">
+    <br><br>
+    <div id="info" style="width: 60%; margin: auto; text-align: center;">
+      <p class="big">Goals</p>
+      <p class="small">
+        There were two goals in building this calculator: programming a <a href="calculator.js">parser</a> and a
+        <a href="LMath.js">math functions library</a>. The parser should use PFEMDAS (parentheses, functions, exponents, multiplication,
+        division, addition, subtraction), calculating first P, then F, then E, then M and D, and finally A and S. The goal with LMath
+        was to program a library of math functions from scratch. No Math.sin, Math.floor, or Math.exp, only LMath.sin, LMath.floor, and
+        LMath.exp, in addition to the rest of LMath methods and constants.
+      </p>
       <p class="big">How Does it Work?</p>
       <p class="medium">Overview</p>
-      <p class="small">There are two parts to this calculator: a <span class="green">parser</span> that organizes the expression entered, 
-        breaking it up by operators and parentheses into simpler 1-step operations the computer can do, and a library of mathematical 
-        functions, like sin, sqrt, and ln, called <span class="blue">LMath</span>.</p>
+<!--   <span class="green">parser</span>     -->
+<!--   <span class="blue">LMath</span>     -->
+      <p class="small">
+        There are two parts to this calculator: a <span class="green">parser</span> that organizes the expression entered, 
+        breaking it up by operators and parentheses into simpler 1-step operations the computer can do, and a library of math 
+        functions, such as sin, sqrt, and ln, called <span class="blue">LMath</span>.
+        <br>
+        The <span class="green">parser</span> could, for
+        example, take an input like <str>4 * (1 - 9)</str> and determine, first, there are parentheses, so calculate them first.
+        <str>1 - 9 = -8</str> so replace <str>(1 - 9)</str> with <str>-8</str>, giving a new input of <str>4 * -8</str>. The
+        <span class="green">parser</span> again checks for parentheses, finds none, so checks for functions and exponents. When it finds
+        none, it checks for multiplication and division. It finds multiplication, performs <str>4 * -8 = -32</str>, and replaces
+        <str>4 * -8</str> with <str>-32</str>. When the parser finds no addition or subtraction following -32, it realizes -32 is the
+        only term left, so returns it as the answer.
+        <br>
+        The <span class="blue">LMath</span> library could tell the <span class="green">parser</span> what the ln(44) is, if it needed to
+        know because, say, its input was 1 + ln(44).
+      </p>
+      <br>
     </div>
   </body>
 </html>
