--- a/calculator/index.html
+++ b/calculator/index.html
@@ -18,7 +18,7 @@
     </div>
     <br><br>
     <div id="info" style="width: 60%; margin: auto;">
-      <p class="big">Goals</p>
+      <p class="big center">Goals</p>
       <p class="small">
         There were two goals in building this calculator: programming a <a href="calculator.js">parser</a> and a
         <a href="LMath.js">math functions library</a>. The parser should use PFEMDAS (parentheses, functions, exponents, multiplication,
@@ -26,8 +26,8 @@
         was to program a library of math functions from scratch. No Math.sin, Math.floor, or Math.exp, only LMath.sin, LMath.floor, and
         LMath.exp, in addition to the rest of LMath methods and constants.
       </p>
-      <p class="big">How Does it Work?</p>
-      <p class="medium">Overview</p>
+      <p class="big center">How Does it Work?</p>
+      <p class="medium center">Overview</p>
 <!--   <span class="green">parser</span>     -->
 <!--   <span class="blue">LMath</span>     -->
       <p class="small">
