--- a/calculator/index.html
+++ b/calculator/index.html
@@ -52,7 +52,7 @@
       <br>
       <p class="medium center">LMath</p>
       <p class="small">
-        The creation of LMath was an excersize in mathematics and algorithms. In programming from scratch the same functionality as the
+        The creation of LMath was an exercise in mathematics and algorithms. In programming from scratch the same functionality as the
         built-in javascript Math library, considerations had to be made for speed in addition to functionality, as most functions build
         off of the foundation laid by previous ones, forming a need for speed through a weakest-link dynamic. For example, the sqrt 
         function uses the pow function which uses the ln function which uses the exp function which uses the intPow function which uses
@@ -60,7 +60,7 @@
         <br><br><span class="center"><str>sqrt -> pow -> ln -> exp -> intPow -> isInt -> floor -> basic operations</str></span><br><br>
         <span class="blue">LMath's</span> methods and constants, linked to descriptions and examples.
       </p>
-      <ul class="center small">
+      <ul class="small noListStyle">
         <li>derivativeMargin</li>
         <li>error</li>
         <li>PI</li>
