--- a/calculator/index.html
+++ b/calculator/index.html
@@ -61,38 +61,130 @@
         <span class="blue">LMath's</span> methods and constants, linked to descriptions and examples.
       </p>
       <ul class="small noListStyle">
-        <li>derivativeMargin</li>
-        <li>error</li>
-        <li>PI</li>
-        <li>RECPI</li>
-        <li>TAU</li>
-        <li>RECTAU</li>
-        <li>E</li>
-        <li>RECE</li>
-        <li>LN2</li>
-        <li>SQRT2</li>
-        <li>RECSQRT2</li>
-        <li>abs(x)</li>
-        <li>floor(x)</li>
-        <li>ceil(x)</li>
-        <li>round(x)</li>
-        <li>isInt(x)</li>
-        <li>intPower(intBase, exponent)</li>
-        <li>factorial(x)</li>
-        <li>derivativeApproximation(f, x)</li>
-        <li>newtonianApproximation(f, guess)</li>
-        <li>ln(x)</li>
-        <li>exp(x)</li>
-        <li>pow(base, exponent)</li>
-        <li>sqrt(x)</li>
-        <li>sin(x)</li>
-        <li>cos(x)</li>
-        <li>tan(x)</li>
-        <li>csc(x)</li>
-        <li>sec(x)</li>
-        <li>cot(x)</li>
+        <li><a href="#derivativeMargin">derivativeMargin</a></li>
+        <li><a href="#error">error</a></li>
+        <li><a href="#PI">PI</a></li>
+        <li><a href="#RECPI">RECPI</a></li>
+        <li><a href="#TAU">TAU</a></li>
+        <li><a href="#RECTAU">RECTAU</a></li>
+        <li><a href="#E">E</a></li>
+        <li><a href="#RECE">RECE</a></li>
+        <li><a href="#LN2">LN2</a></li>
+        <li><a href="#SQRT2">SQRT2</a></li>
+        <li><a href="#RECSQRT2">RECSQRT2</a></li>
+        <li><a href="#abs">abs(x)</a></li>
+        <li><a href="#floor">floor(x)</a></li>
+        <li><a href="#ceil">ceil(x)</a></li>
+        <li><a href="#round">round(x)</a></li>
+        <li><a href="#isInt">isInt(x)</a></li>
+        <li><a href="#intPower">intPower(intBase, exponent)</a></li>
+        <li><a href="#factorial">factorial(x)</a></li>
+        <li><a href="#derivativeApproximation">derivativeApproximation(f, x)</a></li>
+        <li><a href="#newtonianApproximation">newtonianApproximation(f, guess)</a></li>
+        <li><a href="#ln">ln(x)</a></li>
+        <li><a href="#exp">exp(x)</a></li>
+        <li><a href="#pow">pow(base, exponent)</a></li>
+        <li><a href="#sqrt">sqrt(x)</a></li>
+        <li><a href="#sin">sin(x)</a></li>
+        <li><a href="#cos">cos(x)</a></li>
+        <li><a href="#tan">tan(x)</a></li>
+        <li><a href="#csc">csc(x)</a></li>
+        <li><a href="#sec">sec(x)</a></li>
+        <li><a href="#cot">cot(x)</a></li>
       </ul>
       <br><br>
+      <ul class="noListStyle">
+        <li id="derivativeMargin">
+          <span class="blue medium">derivativeMargin</span>
+        </li>
+        <li id="error">
+          <span class="blue medium">error</span>
+        </li>
+        <li id="PI">
+          <span class="blue medium">PI</span>
+        </li>
+        <li id="RECPI">
+          <span class="blue medium">RECPI</span>
+        </li>
+        <li id="TAU">
+          <span class="blue medium">TAU</span>
+        </li>
+        <li id="RECTAU">
+          <span class="blue medium">RECTAU</span>
+        </li>
+        <li id="E">
+          <span class="blue medium">E</span>
+        </li>
+        <li id="RECE">
+          <span class="blue medium">RECE</span>
+        </li>
+        <li id="LN2">
+          <span class="blue medium">LN2</span>
+        </li>
+        <li id="SQRT2">
+          <span class="blue medium">SQRT2</span>
+        </li>
+        <li id="RECSQRT2">
+          <span class="blue medium">RECSQRT2</span>
+        </li>
+        <li id="abs">
+          <span class="blue medium">abs(x)</span>
+        </li>
+        <li id="floor">
+          <span class="blue medium">floor(x)</span>
+        </li>
+        <li id="ceil">
+          <span class="blue medium">ceil(x)</span>
+        </li>
+        <li id="round">
+          <span class="blue medium">round(x)</span>
+        </li>
+        <li id="isInt">
+          <span class="blue medium">isInt(x)</span>
+        </li>
+        <li id="intPower">
+          <span class="blue medium">intPower(intBase, exponent)</span>
+        </li>
+        <li id="factorial">
+          <span class="blue medium">factorial(x)</span>
+        </li>
+        <li id="derivativeApproximation">
+          <span class="blue medium">derivativeApproximation(f, x)</span>
+        </li>
+        <li id="newtonianApproximation">
+          <span class="blue medium">newtonianApproximation(f, guess)</span>
+        </li>
+        <li id="ln">
+          <span class="blue medium">ln(x)</span>
+        </li>
+        <li id="exp">
+          <span class="blue medium">exp(x)</span>
+        </li>
+        <li id="pow">
+          <span class="blue medium">pow(base, exponent)</span>
+        </li>
+        <li id="sqrt">
+          <span class="blue medium">sqrt(x)</span>
+        </li>
+        <li id="sin">
+          <span class="blue medium">sin(x)</span>
+        </li>
+        <li id="cos">
+          <span class="blue medium">cos(x)</span>
+        </li>
+        <li id="tan">
+          <span class="blue medium">tan(x)</span>
+        </li>
+        <li id="csc">
+          <span class="blue medium">csc(x)</span>
+        </li>
+        <li id="sec">
+          <span class="blue medium">sec(x)</span>
+        </li>
+        <li id="cot">
+          <span class="blue medium">cot(x)</span>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
