--- a/calculator/index.html
+++ b/calculator/index.html
@@ -101,7 +101,7 @@
           attribute = LMathAttributes[i];
           
           li = document.createElement("li");
-          li.innerHTML = "<span class='blue medium'>attribute.name</span>";
+          li.innerHTML = "<span class='blue medium'>" + attribute.name + "</span>";
           ul.appendChild(li);
         }
       </script>
