--- a/calculator/index.html
+++ b/calculator/index.html
@@ -60,7 +60,7 @@
         <br><br><span class="center"><strong>sqrt -> pow -> ln -> exp -> intPow -> isInt -> floor -> basic operations</strong></span><br><br>
         <span class="blue">LMath's</span> methods and constants, linked to descriptions and examples.
       </p>
-      <ul id="LMathAttributesList" class="noListStlye"></ul>
+      <ul id="LMathAttributesList" class="noListStyle"></ul>
       <script>
         var LMathAttributes = [
           {"name": "derivativeMargin", "description": ""},
