--- a/calculator/index.html
+++ b/calculator/index.html
@@ -64,15 +64,15 @@
           {"name": "derivativeMargin", "description": "h in the limit definition of a derivative: (f(x + h) - f(x))/h"},
           {"name": "error", "description": "A guaranteed precision for results."},
           {"name": "PI", "description": "pi = 3.14159..."},
-          {"name": "RECPI", "description": ""},
-          {"name": "TAU", "description": ""},
-          {"name": "RECTAU", "description": ""},
-          {"name": "E", "description": ""},
-          {"name": "RECE", "description": ""},
-          {"name": "LN2", "description": ""},
-          {"name": "SQRT2", "description": ""},
-          {"name": "RECSQRT2", "description": "test"},
-          {"name": "abs", "description": ""},
+          {"name": "RECPI", "description": "1 / pi = 0.31830..."},
+          {"name": "TAU", "description": "tau = 2*pi = 6.28318..."},
+          {"name": "RECTAU", "description": "1 / tau = 0.15915..."},
+          {"name": "E", "description": "e = 2.71828..."},
+          {"name": "RECE", "description": "1/e = 0.36787..."},
+          {"name": "LN2", "description": "The natural log of 2 = ln(2) = 0.69314..."},
+          {"name": "SQRT2", "description": "The square root of 2 = sqrt(2) = 1.41421..."},
+          {"name": "RECSQRT2", "description": "1 / sqrt(2) = 0.70710..."},
+          {"name": "abs", "description": "The absolute value function returns the input made positive: if the input is negative, return negative input to make it positive."},
           {"name": "floor", "description": ""},
           {"name": "ceil", "description": ""},
           {"name": "round", "description": ""},
