--- a/calculator/index.html
+++ b/calculator/index.html
@@ -80,7 +80,7 @@
           
           titleSpan = document.createElement("span");
           titleSpan.classNames = "blue medium";
-          titleSpan.style.margin = 4%;
+          titleSpan.style.margin = "4%";
           titleSpan.textContent = attribute.name;
           li.appendChild(titleSpan);
           br = document.createElement("br");
