--- a/calculator/index.html
+++ b/calculator/index.html
@@ -79,7 +79,7 @@
           li = document.createElement("li");
           
           titleSpan = document.createElement("span");
-          titleSpan.classNames = "blue medium";
+          titleSpan.className = "blue medium";
           titleSpan.textContent = attribute.name;
           li.appendChild(titleSpan);
           
