--- a/calculator/index.html
+++ b/calculator/index.html
@@ -92,7 +92,7 @@
           descriptionP.style.display = "none";
           
           expandButton = document.createElement("button");
-          expandButton.style.marginLeft = "4%";
+          expandButton.className = "center";
           expandButton.style.fontSize = "100%";
           expandButton.textContent = "+";
           expandButton.descriptionPId = descriptionP.id;
