--- a/calculator/index.html
+++ b/calculator/index.html
@@ -87,6 +87,7 @@
           descriptionDiv.style.display = "none";
           
           descriptionP = document.createElement("p");
+          descriptionP.className = "small";
           descriptionP.textContent = attribute.description;
           
           expandButton = document.createElement("button");
