--- a/calculator/index.html
+++ b/calculator/index.html
@@ -91,6 +91,8 @@
           descriptionP.textContent = attribute.description;
           
           expandButton = document.createElement("button");
+          expandButton.style.marginBottom = "1%";
+          expandButton.style.marginTop = "1%";
           expandButton.style.fontSize = "100%";
           expandButton.textContent = "+";
           expandButton.descriptionDivId = descriptionDiv.id;
