--- a/bird-breaker/index.html
+++ b/bird-breaker/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Bird Breaker</title>
     
+    <script src="style.css"></script>
     <script src="bird-breaker.js"></script>
   </head>
   <body>
