--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <p style="font-size: 3em; text-align: center;">PLACEHOLDER</p>
     <p style="font-size: 1.5em; text-align: center;">For now, go to any of these:</p>
     <p style="font-size: 1em; text-align: center;"><a href="/calculator">www.arongil.com/calculator</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/calculator">www.arongil.com/bird-breaker</a></p>
+    <p style="font-size: 1em; text-align: center;"><a href="/bird-breaker">www.arongil.com/bird-breaker</a></p>
   </body>
 </html>
