--- a/bird-breaker/index.html
+++ b/bird-breaker/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bird Breaker</title>
     
-    <script src="style.css"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="bird-breaker.js"></script>
   </head>
   <body>
