--- a/programs-collection/index.html
+++ b/programs-collection/index.html
@@ -16,6 +16,7 @@
       </ul>
     </div>
     <script>
+      populateProgramsList(listPrograms, "programs-list");
     </script>
   </body>
 </html>
