--- a/programs-collection/index.html
+++ b/programs-collection/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="head">
-      <p><span id="title-text">Laker's Programs</span></p>
+      <p><span id="title-text">My Programs</span></p>
     </div>
     <div id="display-wrapper">
       <ul id="programs-list" style="list-style: none;">
