--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Arongil</title>
   </head>
-  <body>
+  <body
     <p style="font-size: 3em; text-align: center;">PLACEHOLDER</p>
     <p style="font-size: 1.5em; text-align: center;">For now, go to any of these:</p>
-    <p style="font-size: 1.1em; color: blue; text-align: center;"><a href="/programs-collection">www.arongil.com/programs-collection</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/calculator">www.arongil.com/calculator</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/bird-breaker">www.arongil.com/bird-breaker</a></p>
-    <p style="font-size: 1em; text-align: center;"><a href="/void">www.arongil.com/void</a></p>
+    <p style="font-size: 1.1em; text-align: center;"><a href="/programs-collection">Programs Collection</a></p>
+    <p style="font-size: 1em; text-align: center;"><a href="/calculator">Calculator</a></p>
+    <p style="font-size: 1em; text-align: center;"><a href="/bird-breaker">Bird Breaker</a></p>
+    <p style="font-size: 1em; text-align: center;"><a href="/void">Void</a></p>
   </body>
 </html>
