--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Arongil</title>
   </head>
-  <body
+  <body>
     <p style="font-size: 3em; text-align: center;">PLACEHOLDER</p>
     <p style="font-size: 1.5em; text-align: center;">For now, go to any of these:</p>
     <p style="font-size: 1.1em; text-align: center;"><a href="/programs-collection">Programs Collection</a></p>
