--- a/programs-collection/index.html
+++ b/programs-collection/index.html
@@ -11,7 +11,7 @@
       <p><span id="title-text">My Programs</span></p>
     </div>
     <div id="display-wrapper">
-      <ul id="programs-list" style="list-style: none;">
+      <ul id="programs-list" style="list-style: none; margin: auto;">
         <!-- This unordered list will be populated with javascript. -->
       </ul>
     </div>
