--- a/programs-collection/index.html
+++ b/programs-collection/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="head">
-      <span id="title-text">My Programs</span>
+      <p style="margin: auto;"><span id="title-text">My Programs</span></p>
     </div>
     <div id="display-wrapper">
       <ul id="programs-list" style="list-style: none; padding: 0%;">
