--- a/programs-collection/index.html
+++ b/programs-collection/index.html
@@ -12,7 +12,7 @@
     </div>
     <div id="display-wrapper">
       <ul id="programs-list" style="list-style: none; padding: 0%;">
-        <!-- This unordered list will be populated with javascript. -->
+        <!-- This unordered list will be populated in javascript. -->
       </ul>
     </div>
     <script>
