--- a/calculator/index.html
+++ b/calculator/index.html
@@ -79,7 +79,7 @@
           li = document.createElement("li");
           
           titleSpan = document.createElement("span");
-          titleSpan.className = "medium";
+          titleSpan.className = "arial medium";
           titleSpan.textContent = attribute.name;
           
           descriptionDiv = document.createElement("div");
