--- a/calculator/index.html
+++ b/calculator/index.html
@@ -56,7 +56,7 @@
         function uses the pow function which uses the ln function which uses the exp function which uses the intPow function which uses
         the isInt function which uses the floor function which, breaking the chain, uses only addition, multiplication, and loops.
         <br><br><span class="center"><strong>sqrt -> pow -> ln -> exp -> intPow -> isInt -> floor -> basic operations</strong></span><br><br>
-        <span class="blue">LMath's</span> methods and constants, linked to descriptions and examples.
+        <span class="blue">LMath's</span> methods and constants, with expandable descriptions and examples.
       </p>
       <ul id="LMathAttributesList" class="noListStyle"></ul>
       <script>
