--- a/bird-breaker/index.html
+++ b/bird-breaker/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <div id="game-description" class="center">
+      <p class="big white">Bird Breaker</p>
+    </div>
     <script>
       init();
     </script>
