--- a/bird-breaker/index.html
+++ b/bird-breaker/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <div id="game-description" class="center">
-      <p class="big white">Bird Breaker</p>
+    <div id="game-description" class="center white">
+      <p class="big">Bird Breaker</p>
+      <p class="small">
+        Fly your plane to victory by breaking birds with the ball! Use the left and right arrow keys to steer, and when the ball comes down, hit it back up with your wings or propellor. Be warned, the birds have a nasty temper!
+      </p>
     </div>
     <script>
       init();
