--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,6 +4,7 @@
     <title>Calculator</title>
     
     <link href="/base-styles.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
     <script src="LMath.js"></script>
     <script src="calculator.js"></script>
   </head>
